# BESx

./: .gitignore  ARCHITECTURE.md  BESx_Codebase.ipynb  BESx_Codebase.md  DEPLOY.md  Metricas_Dashboard_Explicadas.md  README.md  STACK.md  bess_batch_mode.plecs  besx_documentation.md  dadosnovos.csv  get_oauth_token.py  meeting.md  plecs_diagnostico.md.resolved  potencia_mes_in.mat  project_mapping.md  project_mapping.xlsx  pyproject.toml  requirements-dev.txt  requirements.txt  run_cli.bat  run_dashboard.bat  soc_out_mes.csv  test_res.txt  to_do.md
.fluxo/: ems_overview.md  energy_integration.md  load_shifting.md  peak_shaving.md  pfc_logic.md
.gsd/: ARCHITECTURE.md  DEBUG.md  DECISIONS.md  JOURNAL.md  REQUIREMENTS.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md  TODO.md
.streamlit/: config.toml
_OLD/: CFADE_update3.py  bess_batch_mode.plecs.autosave  dadosnovos (2).csv  dadosnovos.csv  debug_rainflow.csv  old_plecs_integration.py  perfis_de_entrada.xlsx  potencia_mes_in  potencia_mes_in (2).mat  potencia_mes_in.csv  soc_mes_out.csv  soc_out_mes (2).csv  teste.py  teste_server.py
_ref/: simular_soc_mes.txt
database/: Atot - BackUp.mat  cmveditora.mat  ems_Alvaorada_L300_numba.pkl  ems_Alvorada_Correção_do_FP.pkl  ems_Alvorada_Load_275_2Bat.pkl  ems_CINDACTA_D960_-_18-21H.pkl  ems_CINDACTA_LoadShifting.csv  ems_CINDACTA_LoadShifting.mat  ems_CINDACTA_TESTE_1.csv  ems_CINDACTE_TESTE_001.csv  ems_CINDACTE_TESTE_001.mat  ems_CLIENTE_PROJETO.pkl  ems_Cindacta_Peak_Shaving.pkl  ems_NEO-PE_CINDACTA-3BAT.pkl  ems_NEO-PE_CINDACTA-5BAT.pkl  ems_Pal_Alvor_Combined.pkl  (+5 more)
(+182 files in other folders)
